--- a/teamplates/main.html
+++ b/teamplates/main.html
@@ -5,6 +5,11 @@
     <title>{{ title }}</title>
   </head>
   <body>
-    {{header}}
+    <div>
+      {{ header }}
+    </div>
+    <div>
+      {{ page }}
+    </div>
   </body>
 </html>
